# ShallNotForget

./: CMakeLists.txt
src/: CMakeLists.txt  config.c  fsops.c  main.c  operations.c  parse.c  parse.h
src/fsops/: CMakeLists.txt  fsops.c  fsops.h
src/ops/: CMakeLists.txt  ops.c  ops.h
src/utils/: CMakeLists.txt  utils.c  utils.h
